ADD FOOTER PART, ADD REACT ROUTER AND REACT LINK

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script
+      src="https://kit.fontawesome.com/e00908b995.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rub3n</title>
   </head>
